# arkived

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  chrome.tsx  content.tsx  data.ts  icons.tsx  panels.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs
app/src/lib/: ipc.ts
crates/arkived-cli/: Cargo.toml
crates/arkived-cli/src/: main.rs
crates/arkived-core/: Cargo.toml
crates/arkived-core/src/: ctx.rs  error.rs  lib.rs  types.rs
crates/arkived-core/src/auth/: account_key.rs  anonymous.rs  azurite.rs  connection_string.rs  credentials.rs  mod.rs  resolved.rs  sas.rs  shared_key.rs
crates/arkived-core/src/auth/entra/: cache.rs  credential.rs  device_code.rs  mod.rs
crates/arkived-core/src/backend/: mod.rs  types.rs
crates/arkived-core/src/backend/azure/: auth_bridge.rs  error.rs  http.rs  mod.rs  models.rs  retry.rs  xml.rs
crates/arkived-core/src/backend/azure/ops/: copy_blob.rs  delete_blob.rs  list_blobs.rs  list_containers.rs  mod.rs  read_blob.rs  write_blob.rs
crates/arkived-core/src/config/: mod.rs
crates/arkived-core/src/policy/: mod.rs
crates/arkived-core/src/progress/: mod.rs
crates/arkived-core/src/store/: attached_resource.rs  context.rs  mod.rs  policy_memory.rs  sign_in.rs  storage_account.rs  subscription.rs
crates/arkived-core/tests/: azurite_crud.rs  azurite_sharedkey.rs  foundation_integration.rs
docs/: architecture.md  storage-explorer-parity-and-beyond.md  trademark-compliance.md
docs/superpowers/plans/: 2026-04-20-v0.1.0-foundation.md  2026-04-21-v0.1.0-auth.md  2026-04-21-v0.1.0-backend.md
docs/superpowers/specs/: 2026-04-20-v0.1.0-identical-and-beyond-design.md
src/: lib.rs
