[workspace]
resolver = "2"
members = [
    "crates/arkived-core",
    "crates/arkived-cli",
]
exclude = [
    "app",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = [
    "Hamza Abdagić <hamza.abdagic@horizon-tech.io>",
    "Horizon Tech d.o.o.",
]
license = "Apache-2.0"
repository = "https://github.com/Horizon-Tech-doo/arkived"
homepage = "https://arkived.app"
rust-version = "1.88"

[workspace.dependencies]
# Current Microsoft Azure SDK for Rust
azure_core = "0.34"
azure_identity = "0.34"
azure_storage_blob = "0.11"

# Hand-rolled crypto for SharedKey signing + OAuth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
mockito = "1"
httpdate = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "~4.4", features = ["derive", "env"] }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data
bytes = "1"

# Store + crypto + identifiers
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2"
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
time = { version = "0.3", features = ["serde-well-known"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
