[package]
name = "arkived-app"
version = "0.0.1"
description = "Arkived desktop app (Tauri)"
authors = [
    "Hamza Abdagić <hamza.abdagic@horizon-tech.io>",
    "Horizon Tech d.o.o.",
]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arkived_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
