[package]
name = "arkived-app"
version = "0.0.1"
description = "Arkived desktop app (Tauri)"
authors = [
    "Hamza Abdagić <hamza.abdagic@horizon-tech.io>",
    "Horizon Tech d.o.o.",
]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.88"

[lib]
name = "arkived_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
arkived-core = { path = "../../crates/arkived-core", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures = "0.3"
secrecy = "0.8"
base64 = "0.22"
sha2 = "0.10"
time = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webbrowser = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
