[package]
name = "arkived-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core library for Arkived — storage backend abstraction, policy layer, and Azure implementation."
readme = "../../README.md"
keywords = ["azure", "storage", "cloud"]
categories = ["api-bindings", "filesystem"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
keyring = { workspace = true }
uuid = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_storage_blob = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
mockito = { workspace = true }
httpdate = { workspace = true }
